2009-10-11 Guido Scholz <guido.scholz@bayernline.de>
	* mainwindow.*: Obsolete aboutWidget removed.
	* mainwindow.cpp: Sequence of "View" and "Module" menus changed,
	to meet common standards.
	* mainwindow.cpp, arpdata.*, seqdriver.*: Show ALSA client id in
	window title
	* translations/*.ts: Obsolete messages removed
	* arpwidget.cpp: Widget placement by standard layout margins.
	Focus follows tab fixed.
	* groovewidget.cpp: Widget placement by standard layout margins.
	* lfowidget.*: Obsolete header files removed, missing keyboard
	shortcuts added, layout improved
	* slider.*: Layout improved, label member variable removed.

2009-10-10 Frank Kober <goemusic@yahoo.fr>
	* passwidget.*, mainwindow.cpp, seqdriver.cpp: "discard" logic 
	changed to "forward to" to be more intuitive
	* seqdriver.*, midiarp.*: footswitch now properly channel-filtered 
	and handled in midiarp
	* seqdriver.*: more cleanups regarding midi clock
	* mainwindow.cpp: show file menu by default

2009-10-07 Frank Kober <goemusic@yahoo.fr>
	* mainwindow.cpp: fixed: do not call delete in moduleDelete()
	* midilfo.cpp, lfowidget.cpp: offset slider and function enabled
	
2009-09-28 Frank Kober <goemusic@yahoo.fr>
	* seqdriver.*: switched from ALSA tick to ALSA realtime event
	scheduling to allow for smoother MIDI clock slave operation. 
	Internal handling continues to be in ticks. On-the-fly tempo changes 
	while running including those of the incoming MIDI clock are still 
	troublesome, starting midi clock speed is guessed from local 
	tempo value
	* mainwindow.cpp: fixed unmatched port value update when file
	loaded, stop Queue before clear(), add View menu, add tooltips,
	fix double employed Ctrl-N key sequence
	* logwidget.cpp: disable logging by default

2009-09-26 Frank Kober <goemusic@yahoo.fr>
	* mainwindow.*, lfowidget.*, arpwidget.*, seqdriver.*, arpdata.*: 
	new load/save/saveAs logic adapted from Guido's implementation in 
	qmidiroute started