@@ -1,9 +1,6 @@
 #ifndef ARPWIDGET_H
 #define ARPWIDGET_H
 
-#include <stdio.h>
-#include <stdlib.h>
-#include <unistd.h>
 #include <QString>
 #include <QLabel>
 #include <QSlider>
